[package]
name = "pcphelper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.2", features = ["cargo", "debug", "derive", "env", "string", "unicode", "wrap_help"] }
rfd = "0.14.0"
lazy_static = { version = "1.4.0", features = ["spin"] }
toml = "0.8.12"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
